--- a/src/app/components/list-item/list-item.component.css
+++ b/src/app/components/list-item/list-item.component.css
@@ -1,32 +1,17 @@
   .hide{
     display: none;
   }
-  .card-list{
-    cursor: pointer;
-    margin-bottom: 20px;
-    
+  .select{
+    background-color:rgb(63, 197, 221);
+    color:white;
   }
-  .card-list .icon{
-    position: absolute;
-    right:5%;
-    top:25%;
-    cursor: pointer;
-    color:rgb(63, 197, 221);
+mat-card{
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 1700px) {
+  mat-card{
+    min-height:10vh;
+    margin-bottom: 5vh;
   }
-  .card-list .icon mat-icon{
-    margin:0px 10px;
-    font-size:30px;
-  }
-  @media only screen and (min-width: 1700px) {
-    .card-list .icon mat-icon{
-      margin:0vw 0.8vw;
-      font-size:2vw;
-    }
-    body{
-      font-size:2vw;
-    }
-    .card-list{
-      min-height:10vh;
-      margin-bottom: 5vh;
-    }
-  }
+}
