--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,7 +1,7 @@
-<mat-card class ="card-list" (click)="onLoadTasks(list)">
+<mat-card [ngClass]="select(list)" (click)="onLoadTasks(list)">
     <div [ngClass]="show()">{{list.title}}</div> 
     <app-edit-list [ngClass]="hide()" (editList)="onEdit($event)"></app-edit-list>
-    <div class ="icon">
+    <div [ngClass]="select(list)" class ="icon">
         <mat-icon (click)="onToggleHidden()">edit</mat-icon>
         <mat-icon (click)="onDelete(list)">delete</mat-icon>
     </div>   
