--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -1,6 +1,7 @@
-<div>
+<div style="padding:30px">
     <h1>About</h1>
-    <p>This is the TaskManager app v1.0.0. It is part of my Angular submission for a skills based evaluation</p>
-    <p>This app uses an API created in node.js that connects to a CLEARDB mysql server hosted on heroku</p>
-    <p>The front-end development incorporated technologies such as materialUI, CSS, and Angular Web Framework</p>
+        <p>This is the TaskManager app v1.0.0. It is part of my Angular submission for a skills based evaluation</p>
+        <p>This app uses an API created in node.js that connects to a CLEARDB mysql server hosted on heroku</p>
+        <p>The front-end development incorporated technologies such as materialUI, CSS, and Angular Web Framework</p>
+    </div>
 </div>
